Fix ellipsis overspillage on selectmenu

--- a/src/sass/modules/_selectmenu.scss
+++ b/src/sass/modules/_selectmenu.scss
@@ -67,7 +67,7 @@
 
     span.ui-selectmenu-text {
         display: block;
-        padding:  0.30769231em 2.1em 0.30769231em 0.30769231em; // 4px / 13px
+        padding:  0.30769231em 2em 0.30769231em 0.30769231em; // 4px / 13px
         text-align: left;
         text-overflow: ellipsis;
         white-space: nowrap;
@@ -119,7 +119,7 @@ html[dir="rtl"] {
         }
 
         span.ui-selectmenu-text {
-            padding:  0.30769231em 0.30769231em 0.30769231em 2.1em; // 4px / 13px
+            padding:  0.30769231em 0.30769231em 0.30769231em 2em; // 4px / 13px
             text-align: right;
         }
     }
